--- a/meetingplanner/pom.xml
+++ b/meetingplanner/pom.xml
@@ -9,13 +9,13 @@
   <version>1.0-SNAPSHOT</version>
 
   <name>meetingplanner</name>
-  <!-- FIXME change it to the project's website -->
+  <!-- FIXME change it to the projects website -->
   <url>http://www.example.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
   </properties>
 
   <dependencies>
